# knn-svc

./: .gitignore  README.md  ddsp_hubconf.py  ddsp_inference.py  ddsp_inference_relic.py  ddsp_matcher.py  ddsp_prematch_dataset.py  demo_site_template.py  hubconf.py  knnsvc_demo.ipynb  knnvc_demo.ipynb  knnvc_demo.py  knnvc_utils.py  lib_ongaku_test.py  load_and_compare_csv.py  old_README.md  old_ddsp_inference.py  poetry.toml  pyproject.toml  pyrightconfig.json
data_splits/: OpenSinger_test_intelli.txt  OpenSinger_test_to_OpenSinger_test.txt  OpenSinger_test_to_nus-smc-corpus_48.txt  dev-clean.py  eval_intelligibility.py  file_list_generator.py  speaker_similarity.py  test-clean.py  test_intelli.txt  test_to_test.txt
hifigan/: config_v1_wavlm.json  ddsp_meldataset.py  ddsp_models.py  ddsp_models_f0.py  ddsp_train.py  knn_data_cnpop.py  utils.py  wavlm_full.yaml
pretrained_models/spkrec-xvect-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
sample_content/: Danakil-voice_resampled_16000_cut_f0.npy  Tiken_lead_07_resampled_16000_cut_f0.npy
wavlm/: WavLM.py  modules.py
