
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^2.3.4"
torch = "^2.9.0"
torchaudio = "^2.9.0"
fastprogress = "^1.0.3"
plotly = "^6.3.1"
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
pyworld = "^0.3.5"
soundfile = "^0.13.1"
pydub = "^0.25.1"
librosa = "^0.11.0"
matplotlib = "^3.10.7"
sounddevice = "^0.5.3"
torchcodec = "^0.8.1"
